# HogumaView

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
LICENSE/: HogumaView LICENSE.txt  Open Source LICENSE.html
src-tauri/: Cargo.toml  about.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: Korean.nsh  installer-hooks.nsh  installer.nsi
src-tauri/resources/LICENSE/: HogumaView LICENSE.txt  Open Source LICENSE.html
src-tauri/runtime/imagemagick-7.1.2-15/: NOTICE.txt
src-tauri/runtime/vips-dev-8.18/include/vips/: version.h
src-tauri/runtime/vips-dev-8.18/lib/: libMagickCore-6.Q16.def  libOpenEXR-3_1.def  libc++.def  libc++.lib  libgio-2.0.def  libgio-2.0.lib  libglib-2.0.def  libglib-2.0.lib  libharfbuzz.def  libharfbuzz.lib  libheif.def  libmatio.def  libpoppler.def  libpoppler.lib  libraw_r.def  libraw_r.lib  libunwind.def
src-tauri/runtime/vips-dev-8.18/lib/glib-2.0/include/: glibconfig.h
src-tauri/runtime/vips-dev-8.18/lib/pkgconfig/: Imath.pc  Wand-6.Q16.pc  expat.pc  freetype2.pc  gdk-pixbuf-2.0.pc  gio-2.0.pc  gio-windows-2.0.pc  girepository-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc  harfbuzz-cairo.pc  harfbuzz-gobject.pc  harfbuzz-subset.pc  harfbuzz.pc  libarchive.pc  libheif.pc  libjxl.pc  libjxl_cms.pc  libjxl_threads.pc  libpng16.pc  libraw.pc  libraw_r.pc  librsvg-2.0.pc  libxml-2.0.pc  matio.pc  poppler-glib.pc  poppler.pc  sqlite3.pc  vips-cpp.pc  vips.pc
src-tauri/src/: lib.rs
(+4 files in other folders)
